--- a/package.yaml
+++ b/package.yaml
@@ -19,6 +19,26 @@ dependencies:
 - base >=4 && <5
 - bytestring
 - vector
+- word8
+- array
+- ansi-wl-pprint
+- attoparsec
+- cereal
+- conduit
+- containers
+- deepseq
+- ghc-prim
+- hw-balancedparens >=0.1.0.0
+- hw-bits >=0.4.0.0
+- hw-conduit >=0.2.0.2
+- hw-parser
+- hw-prim >=0.6.2
+- hw-rankselect >=0.12.0
+- hw-rankselect-base >=0.3.2
+- lens
+- mtl
+- resourcet
+- transformers
 library:
   source-dirs: src
   ghc-options:
@@ -53,27 +73,8 @@ library:
   - HaskellWorks.Data.Xml.Token
   - HaskellWorks.Data.Xml.Type
   - HaskellWorks.Data.Xml.Value
-  dependencies:
-  - array
-  - ansi-wl-pprint
-  - attoparsec
-  - cereal
-  - conduit
-  - containers
-  - deepseq
-  - ghc-prim
-  - hw-balancedparens >=0.1.0.0
-  - hw-bits >=0.4.0.0
-  - hw-conduit >=0.2.0.2
-  - hw-parser
-  - hw-prim >=0.4.0.0
-  - hw-rankselect >=0.7.0.0
-  - hw-rankselect-base >=0.2.0.0
-  - lens
-  - mtl
-  - resourcet
-  - transformers
-  - word8
+  - HaskellWorks.Data.Xml.Lazy.Cursor
+  dependencies: []
 executables:
   hw-xml-example:
     main: Main.hs
@@ -86,30 +87,21 @@ executables:
     - -Wall
     - -msse4.2
     dependencies:
-    - hw-balancedparens >=0.2.0.1
-    - hw-bits >=0.7.0.2
-    - hw-prim >=0.5.0.0
-    - hw-rankselect >=0.10.0.3
     - hw-xml
 tests:
   hw-xml-test:
     main: Spec.hs
-    source-dirs: test
+    source-dirs:
+      - test
+      - src
     ghc-options:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - attoparsec
-    - conduit
+    - hedgehog
     - hspec
-    - hw-balancedparens >=0.1.0.0
-    - hw-bits >=0.4.0.0
-    - hw-conduit >=0.2.0.2
     - hw-xml
-    - hw-prim >=0.4.0.0
-    - hw-rankselect >=0.7.0.0
-    - hw-rankselect-base >=0.2.0.0
     - QuickCheck
     verbatim:
       build-tool-depends: hspec-discover:hspec-discover
@@ -122,14 +114,8 @@ benchmarks:
     - -Wall
     - -msse4.2
     dependencies:
-    - conduit
     - criterion
-    - hw-balancedparens >=0.1.0.0
-    - hw-bits >=0.4.0.0
-    - hw-conduit >=0.2.0.2
     - hw-xml
-    - hw-prim >=0.4.0.0
     - mmap
-    - resourcet
 data-files:
 - data/catalog.xml
