--- a/stack.yaml
+++ b/stack.yaml
@@ -1,10 +1,14 @@
-resolver: lts-10.9
+resolver: lts-10.10
 
 packages:
 - '.'
 
 extra-deps:
-  - hedgehog-0.5.3
+  - bits-extra-0.0.1.2
+  - hedgehog-0.6
+  - hw-prim-0.6.2.0
+  - hw-rankselect-base-0.3.2.0
+  - hw-rankselect-0.12.0.2
 
 flags: {}
 
