--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  haskell: haskell-works/haskell-build@1.2.0
+  haskell: haskell-works/haskell-build@dev:1.3.0
   github: haskell-works/github-release@1.0.1
   hackage: haskell-works/hackage@1.0.0
 
@@ -10,17 +10,11 @@ workflows:
     jobs:
       - haskell/build:
           name: Build with GHC 8.4.4
-          cabal-file: hw-xml.cabal
           executor: haskell/ghc-8_4_4
-          write-result-workspace: false
-          cache-version: ${CACHE_VERSION}
 
       - haskell/build:
           name: Build with GHC 8.6.3
-          cabal-file: hw-xml.cabal
           executor: haskell/ghc-8_6_3
-          write-result-workspace: false
-          cache-version: ${CACHE_VERSION}
 
       - github/release-cabal:
           name: GitHub Release
