--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,8 @@
 version: 2.1
 
 orbs:
-  haskell: haskell-works/haskell-build@1.3.0
-  github: haskell-works/github-release@1.2.0
+  haskell: haskell-works/haskell-build@1.3.1
+  github: haskell-works/github-release@1.2.1
   hackage: haskell-works/hackage@1.0.0
 
 
@@ -10,20 +10,23 @@ workflows:
   multiple-ghc-build:
     jobs:
       - haskell/build:
-          name: Build with GHC 8.4.4
+          name: GHC 7.10.3
+          executor: haskell/ghc-7_10_3
+      - haskell/build:
+          name: GHC 8.4.4
           executor: haskell/ghc-8_4_4
 
       - haskell/build:
-          name: Build with GHC 8.6.3
+          name: GHC 8.6.3
           executor: haskell/ghc-8_6_3
 
       - github/release-cabal:
           name: GitHub Release
           requires:
-            - Build with GHC 8.4.4
-            - Build with GHC 8.6.3
+            - GHC 7.10.3
+            - GHC 8.4.4
+            - GHC 8.6.3
           checkout: true
-          cabal-file: hw-xml.cabal
           filters:
             branches:
               only: master
